# python-for-java-devs-curriculum

./: 00_curriculum.py  README.md  _lesson_runner.py  _test_helpers.py  lesson_00_basics.py  lesson_01_basics.py  lesson_01_practice.py  lesson_02_basics.py  lesson_02_collections_practice.py  lesson_02_collections_practice_2.py  lesson_03_basics.py  lesson_03_strings_practice.py  lesson_04_basics.py  lesson_05_basics.py  lesson_05_builtins_practice.py  lesson_05_builtins_practice_2.py  lesson_05_comprehensions_practice.py  lesson_06_basics.py  lesson_07_basics.py  lesson_08_basics.py  lesson_08_eq_hash_practice.py  lesson_08_practice.py  lesson_08_string_formatting_practice.py  lesson_11_basics.py  lesson_11_practice.py  pyproject.toml
docs/: java-equivalents.md
lesson_00/: 01_setup_mac_linux.py  02_setup_windows.py  03_verify_environment.py  basics.py
lesson_01/: 01_syntax.py  02_variables.py  03_control_flow.py  basics.py
lesson_02/: 01_collections.py  02_slicing.py  03_collections_stdlib.py  04_heapq.py  basics.py
lesson_03/: 01_strings.py  basics.py
lesson_04/: 01_loops.py  02_truthiness.py  03_functions.py  basics.py
lesson_05/: 01_builtins.py  02_comprehensions.py  03_functional_style.py  basics.py
lesson_06/: 01_types_and_datatypes.py  02_math_and_numbers.py  03_datetime.py  04_recursion.py  basics.py
lesson_07/: 01_java_gotchas.py  02_pythonic_compactness.py  03_cheat_sheet.py  basics.py
lesson_08/: 01_class_basics.py  02_self_explained.py  03_str_repr_and_formatting.py  04_inheritance.py  05_class_vs_instance.py  06_dataclass.py  basics.py  (+3 more)
(+74 files in other folders)
