[project]
name = "python-for-java-devs"
version = "0.1.0"
description = "Python for Java Developers — interactive lesson curriculum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.0.0",
]
aws = [
    "boto3>=1.34.0",
    "moto[all]>=5.0.0",
    "redis>=5.0.0",
    "fakeredis>=2.20.0",
]
